# legacy-modernizer

./: .gitignore  Dockerfile  README.md  app.py  environment.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  results.json  validate-submission.sh
graders/: grader_coverage.py  grader_refactor.py  grader_syntax.py
server/: app.py
tasks/: task_coverage.py  task_refactor.py  task_syntax.py
